# course_project

./: .env.example  pyproject.toml  readme.md  requirements.txt
data/: report.csv
logs/: spending_by_category_report.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
