[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["Maksim Charin <bonfiglioly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
self = "^2020.12.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
exclude = '(venv)'